initialised project with starter template and typescript

--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "gatsby-plugin-manifest": "^2.2.6",
     "gatsby-plugin-netlify": "^2.1.6",
     "gatsby-plugin-offline": "^2.2.7",
+    "gatsby-plugin-typescript": "^2.1.17",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "typescript": "^3.7.2"
   }
 }
