replaced portfolio starter theme with typescript-plus theme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,16 @@
     "module": "commonjs",
     "target": "esnext",
     "jsx": "preserve",
-    "lib": ["dom", "esnext"],
+    "lib": ["dom", "es2015", "es2017"],
     "strict": true,
     "noEmit": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "noUnusedLocals": false
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "removeComments": false,
+    "preserveConstEnums": true
   },
-  "exclude": ["node_modules", "public", ".cache"]
+  "include": ["./src/**/*"]
 }
