--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# =========================
+# Node.js-Specific Ignores
+# =========================
+
+# Build directory
+public/
+
+# Gatsby cache
+.cache/
+
 # Logs
 logs
 *.log
@@ -33,9 +43,8 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules
-jspm_packages
-**/node_modules/**
+node_modules/
+jspm_packages/
 
 # Typescript v1 declaration files
 typings/
@@ -57,13 +66,50 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.*
-!.env.example
 
-.cache
-**/.cache
-public
+# =========================
+# Operating System Files
+# =========================
 
-.idea
-.vscode
+# OSX
+# =========================
+
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+# =========================
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
